--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>
+      <div id="logo-navbar">
+        <img src="/logo.png" />
+      </div>
+      <div id="links-navbar" class="layout-navbar">
+        <a href="#">Product</a>
+        <a href="#">Templates</a>
+        <a href="#">Pricing</a>
+        <a href="#">Reviews</a>
+      </div>
+      <div id="buttons-navbar" class="layout-navbar">
+        <button id="login-button-navbar"> LOG IN </button>
+        <button id="startfree-button-navbar"> START FREE </button>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
