--- a/index.html
+++ b/index.html
@@ -18,11 +18,53 @@
         <a href="#">Reviews</a>
       </div>
       <div id="buttons-navbar" class="layout-navbar">
-        <button id="login-button-navbar"> LOG IN </button>
-        <button id="startfree-button-navbar"> START FREE </button>
+        <button id="login-button-navbar">LOG IN</button>
+        <button id="startfree-button-navbar">START FREE</button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div id="plans-section">
+        <div id="header-plans-section">
+          <p>Plans & Pricing</p>
+          <p>[toggle]</p>
+        </div>
+        <div id="cards-plans-section">
+          <div class="card-plan">
+            <p class="title-card-plan">Workflow</p>
+            <p class="price-card-plan"><span>$19</span> /MONTH</p>
+            <hr />
+            <ul>
+              <li>Unlimited Clients & Projects</li>
+              <li>Proposals</li>
+              <li>Contracts</li>
+              <li>Invoicing & Payments</li>
+              <li>Client CRM</li>
+              <li>Projects Management</li>
+              <li>Task & Time Tracking</li>
+              <li>IOS, Android, Chrome & Mac Apps</li>
+            </ul>
+            <button>START FREE</button>
+          </div>
+          <div id="popular-card-plan" class="card-plan">
+            <div id="popular-banner">MOST POPULAR</div>
+            <p class="title-card-plan">Workflow</p>
+            <p class="price-card-plan"><span>$19</span> /MONTH</p>
+            <hr />
+            <ul>
+              <li>Unlimited Clients & Projects</li>
+              <li>Proposals</li>
+              <li>Contracts</li>
+              <li>Invoicing & Payments</li>
+              <li>Client CRM</li>
+              <li>Projects Management</li>
+              <li>Task & Time Tracking</li>
+              <li>IOS, Android, Chrome & Mac Apps</li>
+            </ul>
+            <button>START FREE</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
