--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
@@ -12,8 +13,8 @@
         <img src="/logo.png" />
       </div>
       <div id="links-navbar" class="layout-navbar">
-        <a href="#">Product</a>
-        <a href="#">Templates</a>
+        <a href="#">Product <i class="lni lni-arrow-down"></i></a>
+        <a href="#">Templates <i class="lni lni-arrow-down"></i></a>
         <a href="#">Pricing</a>
         <a href="#">Reviews</a>
       </div>
@@ -61,6 +62,44 @@
               <li>IOS, Android, Chrome & Mac Apps</li>
             </ul>
             <button>START FREE</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- --- ADD-ONS SECTION --- -->
+      <div id="addons-section">
+        <div id="addons-title-section">
+          <p>Super charge your work with add-ons</p>
+        </div>
+
+        <div id="addons-cards-section">
+          <div class="addon-card">
+            <p class="subtitle-addon-card">Collaborators</p>
+            <p class="description-addod-card">
+              Invite other users to specific projects for limited access and
+              functionality
+            </p>
+            <p class="price-addon-card">Free</p>
+          </div>
+        </div>
+        <div id="addons-cards-section">
+          <div class="addon-card">
+            <p class="subtitle-addon-card">Collaborators</p>
+            <p class="description-addod-card">
+              Invite other users to specific projects for limited access and
+              functionality
+            </p>
+            <p class="price-addon-card">Free</p>
+          </div>
+        </div>
+        <div id="addons-cards-section">
+          <div class="addon-card">
+            <p class="subtitle-addon-card">Collaborators</p>
+            <p class="description-addod-card">
+              Invite other users to specific projects for limited access and
+              functionality
+            </p>
+            <p class="price-addon-card">Free</p>
           </div>
         </div>
       </div>
