Call To Action Section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Bonsai</title>
   </head>
   <body>
     <header>
@@ -24,6 +24,7 @@
       </div>
     </header>
     <main>
+      <!-- --- PLANS SECTION --- -->
       <div id="plans-section">
         <div id="header-plans-section">
           <p>Plans & Pricing</p>
@@ -79,29 +80,42 @@
               Invite other users to specific projects for limited access and
               functionality
             </p>
-            <p class="price-addon-card">Free</p>
+            <p id="free-addon-card">Free</p>
           </div>
-        </div>
-        <div id="addons-cards-section">
+
           <div class="addon-card">
             <p class="subtitle-addon-card">Collaborators</p>
             <p class="description-addod-card">
               Invite other users to specific projects for limited access and
               functionality
             </p>
-            <p class="price-addon-card">Free</p>
+            <div class="container-price-addon-card">
+              <p class="price-addon-card">$9</p>
+              <p class="price-time-addon-card">/MONTH</p>
+            </div>
           </div>
-        </div>
-        <div id="addons-cards-section">
+
           <div class="addon-card">
             <p class="subtitle-addon-card">Collaborators</p>
             <p class="description-addod-card">
               Invite other users to specific projects for limited access and
               functionality
             </p>
-            <p class="price-addon-card">Free</p>
+            <div class="container-price-addon-card">
+              <p class="price-addon-card">$10</p>
+              <p class="price-time-addon-card">/MONTH</p>
+            </div>
           </div>
         </div>
+      </div>
+
+      <!-- --- CALL-TO-ACTION SECTION --- -->
+      <div id="cta-section">
+        <p>
+          It's <span>your</span> business. <br />
+          We're here to help it grow.
+        </p>
+        <button>START FREE</button>
       </div>
     </main>
     <footer></footer>
