--- a/index.html
+++ b/index.html
@@ -117,7 +117,106 @@
         </p>
         <button>START FREE</button>
       </div>
+
+      <!-- --- QUESTION SECTION --- -->
+      <div id="question-section">
+        <p id="title-question-section">Frequently Asked Questions</p>
+        <div id="container-questions-section">
+          <div class="question-item">
+            <span>Question #01</span>
+            <i class="lni lni-arrow-down"></i>
+          </div>
+          <div class="question-item">
+            <span>Question #02</span>
+            <i class="lni lni-arrow-down"></i>
+          </div>
+          <div class="question-item">
+            <span>Question #03</span>
+            <i class="lni lni-arrow-down"></i>
+          </div>
+          <div class="question-item">
+            <span>Question #04</span>
+            <i class="lni lni-arrow-down"></i>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="footer-col-1">
+        <p class="title-list-footer">PRODUCT</p>
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+
+        <p class="title-list-footer highlight-title">Pricing</p>
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+        </ul>
+      </div>
+
+      <div id="footer-col-2">
+        <div>
+        <p class="title-list-footer">FREE RESOURCES</p>
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+
+        <p class="title-list-footer">Templates</p>
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+      </div>
+      </div>
+      <div id="footer-col-3">
+        <p class="title-list-footer">BONSAI</p>
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a></li>
+          <li><a href="#">Link #01</a></li>
+        </ul>
+
+        <ul class="list-footer">
+          <li><a href="#">Link #01</a><i class="lni lni-arrow-down"></i></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
+
+
+<!-- -- Overlay Padding -- -->
+<!-- -- switch -- -->
